<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">handwritten_autograder</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_obt">Obt</string>
  <string name="lbl_57_8">57.8</string>
  <string name="lbl_faizan_munir">Faizan Munir</string>
  <string name="lbl_upload_photo">Upload Photo</string>
  <string name="lbl_23">23</string>
  <string name="lbl_65">65</string>
  <string name="lbl_enter_marks">Enter Marks</string>
  <string name="lbl_upload">Upload</string>
  <string name="lbl_25">25</string>
  <string name="lbl_about">About</string>
  <string name="lbl_923367890144">+923367890144</string>
  <string name="lbl_100">100</string>
  <string name="msg_already_have_an">Already have an account?</string>
  <string name="msg_upload_assessme">Upload Assessment</string>
  <string name="lbl_phone_number">Phone Number</string>
  <string name="lbl_musab_ahmed"> Musab Ahmed</string>
  <string name="lbl_email2">Email</string>
  <string name="lbl_6_assessments">6 assessments</string>
  <string name="lbl_log_in">Log in</string>
  <string name="lbl_total">Total</string>
  <string name="lbl_python">Python</string>
  <string name="lbl_zain_ahmed">Zain Ahmed</string>
  <string name="msg_at_least_8_char">At least 8 characters</string>
  <string name="lbl_cattiye">Cattiye </string>
  <string name="lbl_max">Max</string>
  <string name="lbl_93">93</string>
  <string name="lbl_edit">Edit</string>
  <string name="lbl_flutter">Flutter</string>
  <string name="lbl_50">50</string>
  <string name="lbl_12">12</string>
  <string name="lbl_54">54</string>
  <string name="lbl_sign_up">Sign Up</string>
  <string name="lbl_sign_up2">Sign up</string>
  <string name="lbl_16">16</string>
  <string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet consectetur. Erat auctor a aliquam vel congue luctus. Leo diam cras neque mauris ac arcu elit ipsum dolor sit amet consectetur.</string>
  <string name="lbl_name">Name </string>
  <string name="lbl_avg">Avg</string>
  <string name="lbl_min">Min</string>
  <string name="lbl_name2">Name:</string>
  <string name="msg_sign_up_with_go">Sign up with Google  </string>
  <string name="lbl_student">Student</string>
  <string name="lbl_bilal_abassi">Bilal Abassi</string>
  <string name="lbl_bilal2">Bilal</string>
  <string name="lbl_c">C++</string>
  <string name="lbl_assg">Assg.</string>
  <string name="lbl_enter_question">Enter Question</string>
  <string name="lbl_about_bilal">About Bilal</string>
  <string name="lbl_course_teaching">Course Teaching</string>
  <string name="lbl_email">Email </string>
  <string name="lbl_bilal"> Bilal</string>
  <string name="lbl_log_in2">Log In</string>
  <string name="msg_welcome_faiza">Welcome !
Faizan Munir</string>
  <string name="lbl_42">42</string>
  <string name="lbl_search">Search</string>
  <string name="lbl_1">1</string>
  <string name="lbl_45">45</string>
  <string name="msg_courses_in_prog">Courses in progress</string>
  <string name="lbl_2">2</string>
  <string name="lbl_3">3</string>
  <string name="lbl_87">87</string>
  <string name="lbl_43">43</string>
  <string name="lbl_4">4</string>
  <string name="lbl_assessment_name2">Assessment Name</string>
  <string name="lbl_5">5</string>
  <string name="lbl_questions">Questions:</string>
  <string name="lbl_view_marks">View Marks</string>
  <string name="msg_example_gmail_c">Example@gmail.com</string>
  <string name="msg_course_in_progr">Course in progress</string>
  <string name="lbl_82_6">82.6</string>
  <string name="msg_list_of_assessm">List Of Assessments</string>
  <string name="lbl_20_8">20.8</string>
  <string name="msg_please_enter_yo">Please enter your details</string>
  <string name="lbl_5_assessments">5 assessments</string>
  <string name="lbl_your_name">Your Name</string>
  <string name="msg_bilalahmed76_gm">BilalAhmed76@gmail.com</string>
  <string name="lbl_total_marks">Total Marks:</string>
  <string name="lbl_assessment_name">Assessment name</string>
  <string name="lbl_3_assessments">3 assessments</string>
  <string name="lbl_34">34</string>
  <string name="lbl_35">35</string>
  <string name="lbl_76">76</string>
  <string name="lbl_password">Password </string>
  <string name="msg_welcome_instruc">Welcome Instructor</string>
  <string name="lbl_38">38</string>
  <string name="lbl_student_name">Student Name</string>
  <string name="lbl_instructor">Instructor</string>
  <string name="lbl_python_marks">Python Marks</string>
  <string name="lbl_91_5">91.5</string>
  <string name="lbl_34_8">34.8</string>
</resources>
