<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <FrameLayout android:id="@+id/frameNewAssessment"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnuploadassessme"
            android:layout_gravity="top|start"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_55pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar android:gravity="start"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:id="@+id/linearRowuploadassessme"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageImagesOne"
                        android:layout_height="@dimen/_55pxh"
                        android:layout_width="@dimen/_104pxh"
                        android:scaleType="fitXY"
                        imageRes="@{@drawable/img_images1}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_images1"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtUploadAssessme"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_9pxv"
                        android:layout_marginTop="@dimen/_15pxv"
                        android:layout_weight="0.66"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@string/msg_upload_assessme"
                        style="@style/txtPoppinsbold20" tools:text="@string/msg_upload_assessme"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnname"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_130pxv"
                android:layout_width="match_parent" android:orientation="vertical">
                <LinearLayout android:id="@+id/linearRowname"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_3pxh"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtName"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_4pxv"
                        android:layout_marginTop="@dimen/_7pxv"
                        android:layout_weight="0.24"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@string/lbl_name2"
                        style="@style/txtPoppinsbold18" tools:text="@string/lbl_name2"/>
                    <EditText
                        android:background="@drawable/rectangle_bg_black_900_radius_19_5"
                        android:ellipsize="end"
                        android:hint="@string/lbl_assessment_name"
                        android:id="@+id/etGroupFour"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_65pxh"
                        android:layout_weight="0.76"
                        android:layout_width="0dp"
                        android:paddingBottom="@dimen/_9pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_13pxh"
                        android:paddingTop="@dimen/_8pxv"
                        android:singleLine="true"
                        android:textColorHint="@color/white_A700"
                        style="@style/etSolidRounded" tools:ignore="Autofill"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearRowtotalmarks"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_45pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTotalMarks"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_8pxv"
                        android:layout_weight="0.37"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@string/lbl_total_marks"
                        style="@style/txtPoppinsbold18" tools:text="@string/lbl_total_marks"/>
                    <EditText
                        android:background="@drawable/rectangle_bg_black_900_radius_18"
                        android:ellipsize="end"
                        android:hint="@string/lbl_enter_marks"
                        android:id="@+id/etGroupTwo"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_13pxh"
                        android:layout_weight="0.63"
                        android:layout_width="0dp"
                        android:paddingBottom="@dimen/_8pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_13pxh"
                        android:paddingTop="@dimen/_6pxv"
                        android:singleLine="true"
                        android:textColorHint="@color/white_A700"
                        style="@style/etSolidRounded_1" tools:ignore="Autofill"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearRowquestions"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_52pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtQuestions"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_2pxv"
                        android:layout_marginTop="@dimen/_5pxv"
                        android:layout_weight="0.33"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@string/lbl_questions"
                        style="@style/txtPoppinsbold18" tools:text="@string/lbl_questions"/>
                    <EditText
                        android:background="@drawable/rectangle_bg_black_900_radius_17_5"
                        android:ellipsize="end"
                        android:hint="@string/lbl_enter_question"
                        android:id="@+id/etGroupThree"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_23pxh"
                        android:layout_weight="0.67"
                        android:layout_width="0dp"
                        android:paddingBottom="@dimen/_8pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_17pxh"
                        android:paddingTop="@dimen/_5pxv"
                        android:singleLine="true"
                        android:textColorHint="@color/white_A700"
                        style="@style/etSolidRounded_2" tools:ignore="Autofill"/>
                </LinearLayout>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnUpload"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_3pxh"
                android:layout_marginStart="@dimen/_44pxh"
                android:layout_marginTop="@dimen/_252pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_11pxv"
                android:singleLine="true"
                android:text="@string/lbl_upload"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_4" tools:text="@string/lbl_upload"/>
        </LinearLayout>
    </FrameLayout>
</layout>
