<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/linearCourseCard"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal" style="@style/groupStyleblack_900_26cornerRadius">
        <ImageView android:id="@+id/imageCourseImage"
            android:layout_height="@dimen/_55pxh"
            android:layout_marginBottom="@dimen/_31pxv"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="@dimen/_61pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_rectangle36}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle36"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumncoursename"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_14pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_weight="0.82" android:layout_width="0dp" android:orientation="vertical">
            <FrameLayout android:id="@+id/frameStackcoursename"
                android:layout_height="@dimen/_36pxv"
                android:layout_marginEnd="@dimen/_10pxh" android:layout_width="@dimen/_79pxh">
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtCourseName"
                    android:layout_gravity="top|start"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.01"
                    android:singleLine="true"
                    android:text="@string/lbl_python"
                    style="@style/txtPoppinssemibold14" tools:text="@string/lbl_python"/>
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtInstructorName"
                    android:layout_gravity="bottom|start"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.01"
                    android:singleLine="true"
                    android:text="@string/lbl_faizan_munir"
                    style="@style/txtPoppinsmedium12" tools:text="@string/lbl_faizan_munir"/>
            </FrameLayout>
            <LinearLayout android:id="@+id/linearRowviewMarks"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnViewMarks"
                    android:layout_height="@dimen/_20pxv"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_width="@dimen/_70pxh"
                    android:paddingBottom="@dimen/_5pxv"
                    android:paddingEnd="@dimen/_18pxh"
                    android:paddingStart="@dimen/_18pxh"
                    android:paddingTop="@dimen/_5pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_view_marks"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded" tools:text="@string/lbl_view_marks"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAssessmentsCounter"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_marginStart="@dimen/_110pxh"
                    android:layout_weight="0.57"
                    android:layout_width="0dp"
                    android:letterSpacing="0.01"
                    android:singleLine="true"
                    android:text="@string/lbl_5_assessments"
                    style="@style/txtPoppinsmedium12" tools:text="@string/lbl_5_assessments"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
