<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearStudentProfile"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_38pxv"
        android:layout_marginEnd="@dimen/_43pxh"
        android:layout_marginStart="@dimen/_12pxh"
        android:layout_marginTop="@dimen/_17pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearMaindiv" android:layout_height="0dp"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_weight="1.0"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_3">
            <LinearLayout android:id="@+id/linearRowprofilepicture"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_26pxh"
                android:layout_marginStart="@dimen/_27pxh"
                android:layout_marginTop="@dimen/_27pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageProfilePicture"
                    android:layout_height="@dimen/_124pxh"
                    android:layout_width="@dimen/_124pxh"
                    android:scaleType="centerCrop" circular="@{true}"
                    imageRes="@{@drawable/img_profilepicture}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_profilepicture"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnUploadPhoto"
                    android:layout_height="@dimen/_26pxv"
                    android:layout_marginBottom="@dimen/_68pxv"
                    android:layout_marginStart="@dimen/_82pxh"
                    android:layout_marginTop="@dimen/_30pxv"
                    android:layout_width="@dimen/_90pxh"
                    android:paddingBottom="@dimen/_7pxv"
                    android:paddingEnd="@dimen/_18pxh"
                    android:paddingStart="@dimen/_17pxh"
                    android:paddingTop="@dimen/_7pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_upload_photo"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_2" tools:text="@string/lbl_upload_photo"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnyourname"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_26pxh"
                android:layout_marginStart="@dimen/_27pxh"
                android:layout_marginTop="@dimen/_33pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtYourName"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_14pxh"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_58pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/lbl_your_name"
                    style="@style/txtOutfitmedium10" tools:text="@string/lbl_your_name"/>
                <LinearLayout android:id="@+id/linearRowbilalabassi"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtBilalAbassi"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5pxv"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.54"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@string/lbl_bilal_abassi"
                        style="@style/txtOutfitmedium10_1" tools:text="@string/lbl_bilal_abassi"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnEdit"
                        android:layout_height="@dimen/_20pxv"
                        android:layout_marginStart="@dimen/_169pxh"
                        android:layout_width="@dimen/_46pxh"
                        android:paddingBottom="@dimen/_5pxv"
                        android:paddingEnd="@dimen/_15pxh"
                        android:paddingStart="@dimen/_18pxh"
                        android:paddingTop="@dimen/_5pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_edit"
                        android:textAllCaps="false"
                        style="@style/btnSolidRounded" tools:text="@string/lbl_edit"/>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEmail"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_14pxh"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_20pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/lbl_email2"
                    style="@style/txtOutfitmedium10" tools:text="@string/lbl_email2"/>
                <LinearLayout android:id="@+id/linearRowemailOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtEmailOne"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_weight="0.73"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@string/msg_bilalahmed76_gm"
                        style="@style/txtOutfitmedium10_1" tools:text="@string/msg_bilalahmed76_gm"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnEditOne"
                        android:layout_height="@dimen/_20pxv"
                        android:layout_marginBottom="@dimen/_4pxv"
                        android:layout_marginStart="@dimen/_99pxh"
                        android:layout_width="@dimen/_46pxh"
                        android:paddingBottom="@dimen/_5pxv"
                        android:paddingEnd="@dimen/_15pxh"
                        android:paddingStart="@dimen/_18pxh"
                        android:paddingTop="@dimen/_5pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_edit"
                        android:textAllCaps="false"
                        style="@style/btnSolidRounded" tools:text="@string/lbl_edit"/>
                </LinearLayout>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowphonenumber"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_102pxv"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_29pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <LinearLayout android:gravity="start"
                        android:id="@+id/linearColumnphonenumber"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.83"
                        android:layout_width="0dp" android:orientation="vertical">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtPhoneNumber"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_width="wrap_content"
                            android:singleLine="true"
                            android:text="@string/lbl_phone_number"
                            style="@style/txtOutfitmedium10" tools:text="@string/lbl_phone_number"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtMobileNo"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_marginTop="@dimen/_6pxv"
                            android:layout_width="wrap_content"
                            android:singleLine="true"
                            android:text="@string/lbl_923367890144"
                            style="@style/txtOutfitmedium10_1" tools:text="@string/lbl_923367890144"/>
                    </LinearLayout>
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnEditTwo"
                        android:layout_height="@dimen/_20pxv"
                        android:layout_marginBottom="@dimen/_3pxv"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="@dimen/_46pxh"
                        android:paddingBottom="@dimen/_5pxv"
                        android:paddingEnd="@dimen/_15pxh"
                        android:paddingStart="@dimen/_18pxh"
                        android:paddingTop="@dimen/_5pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_edit"
                        android:textAllCaps="false"
                        style="@style/btnSolidRounded" tools:text="@string/lbl_edit"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearDescription"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_26pxh"
                android:layout_marginStart="@dimen/_27pxh"
                android:layout_marginTop="@dimen/_34pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <LinearLayout android:id="@+id/linearRowaboutbilal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_14pxh"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtAboutBilal"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.63"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@string/lbl_about_bilal"
                        style="@style/txtPoppinsmedium14" tools:text="@string/lbl_about_bilal"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnEditThree"
                        android:layout_height="@dimen/_16pxv"
                        android:layout_marginBottom="@dimen/_3pxv"
                        android:layout_marginStart="@dimen/_157pxh"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_width="@dimen/_40pxh"
                        android:paddingBottom="@dimen/_3pxv"
                        android:paddingEnd="@dimen/_13pxh"
                        android:paddingStart="@dimen/_15pxh"
                        android:paddingTop="@dimen/_3pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_edit"
                        android:textAllCaps="false"
                        style="@style/btnSolidRounded_3" tools:text="@string/lbl_edit"/>
                </LinearLayout>
                <TextView android:gravity="center_horizontal"
                    android:id="@+id/txtDescription"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20pxv"
                    android:layout_marginEnd="@dimen/_14pxh"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.01"
                    android:text="@string/msg_lorem_ipsum_dol"
                    style="@style/txtOutfitregular10" tools:text="@string/msg_lorem_ipsum_dol"/>
            </LinearLayout>
        </LinearLayout>
        <FrameLayout android:id="@+id/frameBottombar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" style="@style/groupStyleblack_900cornerRadius">
            <LinearLayout android:id="@+id/linearRowhome"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_15pxv"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageHome"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_17pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_95pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_16pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_home"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_home"/>
                <LinearLayout android:id="@+id/linearRowmarks"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.92"
                    android:layout_width="0dp" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageMarks"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_19pxh"
                        android:layout_width="@dimen/_15pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_marks"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_marks"/>
                    <ImageView android:id="@+id/imageLock"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_18pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginEnd="@dimen/_95pxh"
                        android:layout_marginStart="@dimen/_60pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="@dimen/_16pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_lock"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_lock"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
